# arcadeplusplus

./: .gitignore  CMakeLists.txt  README.md
include/app/: Application.h  GameManager.h  Scene.h  SceneId.h  WindowConfig.h
include/games/common/: GameState.h
include/games/pong/: Ball.h  Paddle.h  PongConfig.h  PongScene.h  PongState.h
src/: main.cpp
src/app/: Application.cpp  GameManager.cpp
src/games/pong/: Ball.cpp  Paddle.cpp  PongScene.cpp
